resolved size container, this produced an unboarding on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,9 @@ html {
 ::selection {
     background: #ffdc00
 }
+* {
+    border: solid 2px #ffdc00;
+}
 
 body,
 html {
@@ -971,6 +974,7 @@ img.avatar {
         position:absolute;
         top:10%;
         left:50%;
+        visibility: hidden;
     }
 
     img.avatar {
